# matrix

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  Makefile  README.md  annotated.html  class_pairing_function-members.html  class_pairing_function.html  class_pseudo_matrix-members.html  class_pseudo_matrix.html  classes.html  cmake_install.cmake  dir_09e761304027c904456130627fd4dcf5.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main.cpp  main_8cpp.html  main_8cpp__incl.dot  main_8cpp__incl.map  main_8cpp__incl.md5  matrix  matrix-0.0.1-Linux.deb  matrix_8h.html  matrix_8h__dep__incl.dot  matrix_8h__dep__incl.map  matrix_8h__dep__incl.md5  matrix_8h__incl.dot  matrix_8h__incl.map  matrix_8h__incl.md5  matrix_8h_source.html  (+2 more)
_CPack_Packages/Linux/DEB/matrix-0.0.1-Linux/: control  md5sums
includes/: matrix.h  new_matrix.h
search/: all_0.js  all_2.js  all_3.js  all_4.js  classes_1.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  searchdata.js
test/: tests.cpp
